# eurovision

./: .gitignore  README.md  pyproject.toml
dashboard/: app.py
data/processed/: contestants.parquet  final_results.parquet  votes.parquet
src/eurovision/: __init__.py  analysis.py  build.py  coords.py  countries.py  data.py  ingest.py  wiki_parse.py
