[project]
name = "eurovision"
version = "0.1.0"
description = "Eurovision Song Contest voting analysis + interactive dashboard"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "duckdb>=1.0",
    "pyarrow>=15",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5",
    "streamlit>=1.36",
    "plotly>=5.20",
    "altair>=5.3",
    "tqdm>=4.66",
    "scipy>=1.13",
    "networkx>=3.3",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = ["ipykernel", "jupyter", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eurovision"]

[tool.ruff]
line-length = 100
